fixed text wrap problem

--- a/src/shared/ui/redesigned/Text/Text.module.scss
+++ b/src/shared/ui/redesigned/Text/Text.module.scss
@@ -4,6 +4,7 @@
 
 .text {
     color: var(--text-redesigned);
+    word-wrap: break-word;
 }
 
 .error {
@@ -73,4 +74,8 @@
     .text {
         font-weight: 700;
     }
+}
+
+.fullWidth {
+    width: 100%;
 }
